workloads/apps/flame/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flame
spec:
  ports:
    - port: 80
      targetPort: 5005
  selector:
    app: flame
