workloads/apps/flame/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flame
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - flame.ozeliurs.com
      secretName: flame-tls
  rules:
    - host: flame.ozeliurs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flame
                port:
                  number: 80
